<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".OwnerSignUp"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:id="@+id/owner_signup_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/carownerfind"
        android:transitionName="logo_image"
        android:contentDescription="@string/contentDescription_applogo"/>

    <TextView
        android:id="@+id/owner_signup_name"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginTop="-25dp"
        android:fontFamily="@font/bungee"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:transitionName="logo_text" />

    <TextView
        android:id="@+id/owner_signup_slogan_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/allerta_stencil"
        android:text="@string/signup"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:transitionName="logo_text2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:transitionName="owner_signup_trans">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/owner_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/full_name"
            android:textColorHint="@color/davy_grey"
            app:boxStrokeColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/owner_contno"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_no"
            android:textColorHint="@color/davy_grey"
            app:boxStrokeColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLength="10"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/owner_vehno"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/vehicle_no"
            android:textColorHint="@color/davy_grey"
            app:boxStrokeColor="@color/black"
            app:placeholderText="AB 12CD 3456"
            app:placeholderTextColor="#6D575454">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/owner_vehicle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/vehicle"
            android:textColorHint="@color/davy_grey"
            app:boxStrokeColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/owner_go"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_button"
        android:textColor="@color/black"
        android:backgroundTint="@color/button_yellow"
        android:transitionName="info_signup_trans"/>

</LinearLayout>